--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "semantic-ui-css": "^2.2.12",
-    "semantic-ui-react": "^0.74.2"
+    "semantic-ui-react": "^0.74.2",
+    "web-dsp": "0.0.10"
   },
   "scripts": {
     "start": "react-scripts start",
