--- a/package.json
+++ b/package.json
@@ -30,5 +30,18 @@
 		"build": "react-scripts build",
 		"test": "react-scripts test --env=jsdom",
 		"eject": "react-scripts eject"
+	},
+	"devDependencies": {
+		"babel-eslint": "^8.2.3",
+		"eslint": "^4.19.1",
+		"eslint-config-fbjs": "^2.0.1",
+		"eslint-config-prettier": "^2.9.0",
+		"eslint-plugin-babel": "^5.1.0",
+		"eslint-plugin-flowtype": "^2.46.3",
+		"eslint-plugin-jsx-a11y": "^6.0.3",
+		"eslint-plugin-prettier": "^2.6.0",
+		"eslint-plugin-react": "^7.8.2",
+		"eslint-plugin-relay": "^0.0.21",
+		"prettier": "^1.12.1"
 	}
 }
