--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,7 @@
 {
-    "recommendations": [
-	"EditorConfig.EditorConfig",
-	"esbenp.prettier-vscode"
-    ]
+  "recommendations": [
+    "EditorConfig.EditorConfig",
+    "esbenp.prettier-vscode",
+    "msjsdiag.debugger-for-chrome"
+  ]
 }
