--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"react-scripts": "1.0.14",
 		"recharts": "^1.0.0-apha.5",
 		"redux": "^3.7.2",
+		"redux-persist": "^5.10.0",
 		"redux-thunk": "^2.2.0",
 		"semantic-ui-css": "^2.2.12",
 		"semantic-ui-react": "^0.74.2",
