--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"react-router": "^4.2.0",
 		"react-router-dom": "^4.2.2",
 		"react-scripts": "1.0.14",
+		"react-semantic-ui-range": "^0.6.2",
 		"recharts": "^1.0.0-apha.5",
 		"redux": "^3.7.2",
 		"redux-persist": "^5.10.0",
