--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
 		"redux-thunk": "^2.2.0",
 		"semantic-ui-css": "^2.2.12",
 		"semantic-ui-react": "^0.74.2",
-		"ssim": "^0.0.0"
+    "ssim": "^0.0.0",
+    "@tensorflow/tfjs": "^0.13.2",
+    "tfjs-yolo-tiny": "1.0.1"
 	},
 	"scripts": {
 		"start": "react-scripts start",
